# team-alpha

./: .gitignore
fastapi/: README.md
fastapi/helloworld/: pyproject.toml
fastapi/helloworld/src/: main.py
fastapi/todo/: pyproject.toml
fastapi/todo/src/: main.py  todofn.py
microservice/fastapi-todo/: README.md  pyproject.toml
microservice/fastapi-todo/src/: main.py  settings.py
